Fix wrapping on software table

--- a/frontend/pages/software/ManageSoftwarePage/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/_styles.scss
@@ -174,11 +174,13 @@
             tbody {
               .name__cell {
                 width: $col-md;
-                a {
-                  text-decoration: none;
-                  &:hover {
-                    text-decoration: underline;
-                  }
+
+                .component__tooltip-wrapper {
+                  margin: 10px 0; // vertical padding long software name in row
+                }
+
+                .component__tooltip-wrapper__element {
+                  white-space: initial; // wraps long software names
                 }
               }
               .version__cell {
@@ -204,6 +206,7 @@
                   justify-content: space-between;
                   .hosts-cell__link {
                     display: flex;
+                    white-space: nowrap;
                   }
                 }
               }
